update salesforce dx project
プロジェクトをアップデート。

--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -1,6 +1,9 @@
 public with sharing class AccountController {
     @AuraEnabled(cacheable=true)
     public static List<Account> getAccounts() {
+        // エラーメッセージプレビュー
+        //throw new AuraHandledException('Forced error');
+        // 正常処理
         return [
             SELECT Name, AnnualRevenue, Industry
             FROM Account
