update salesforce dx project
プロジェクトをアップデート。

--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -1,14 +1,16 @@
 public with sharing class AccountController {
     @AuraEnabled(cacheable=true)
     public static List<Account> getAccounts() {
-        // エラーメッセージプレビュー
-        //throw new AuraHandledException('Forced error');
-        // 正常処理
+        //previewExceptionError();
         return [
             SELECT Name, AnnualRevenue, Industry
             FROM Account
             WITH SECURITY_ENFORCED
             ORDER BY Name
         ];
+    }
+
+    private static void previewExceptionError() {
+        throw new AuraHandledException('Forced error');
     }
 }
