--- a/force-app/main/default/classes/AccountListControllerLwc.cls
+++ b/force-app/main/default/classes/AccountListControllerLwc.cls
@@ -16,4 +16,13 @@ public with sharing class AccountListControllerLwc {
             WHERE NumberOfEmployees >= :numberOfEmployees
         ];
     }
+
+    @AuraEnabled(cacheable=true)
+    public static List<Account> queryAccountsByRevenue(Decimal annualRevenue) {
+        return [
+            SELECT Name
+            FROM Account
+            WHERE AnnualRevenue >= :annualRevenue
+        ];
+    }
 }
