--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -1,16 +1,27 @@
 public with sharing class AccountController {
-    @AuraEnabled(cacheable=true)
-    public static List<Account> getAccounts() {
-        //previewExceptionError();
-        return [
-            SELECT Name, AnnualRevenue, Industry
-            FROM Account
-            WITH SECURITY_ENFORCED
-            ORDER BY Name
-        ];
+
+    /**
+     * コンストラクタ
+     */
+    public AccountController() {
+
     }
 
-    private static void previewExceptionError() {
-        throw new AuraHandledException('Forced error');
+    /**
+     * 取引先情報取得
+     */
+    @AuraEnabled(cacheable=true)
+    public static List<Account> getAccounts() {
+        return [
+            SELECT
+                 Id
+                ,Name
+                ,AnnualRevenue
+                ,Industry
+            FROM
+                Account
+            WITH SECURITY_ENFORCED
+            ORDER BY Name ASC
+        ];
     }
 }
