--- a/force-app/main/default/classes/AccountControllerLwc.cls
+++ b/force-app/main/default/classes/AccountControllerLwc.cls
@@ -1,10 +1,28 @@
 public with sharing class AccountControllerLwc {
+
+    /**
+     * コンストラクタ
+     */
+    public AccountControllerLwc() {
+
+    }
+
+    /**
+     * 取引先責任者取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Contact> queryRelatedContacts(Id accountId) {
         return [
-            SELECT Name, Title, Email, Phone
-            FROM Contact
-            WHERE AccountId = :accountId
+            SELECT
+                 Id    
+                ,Name
+                ,Title
+                ,Email
+                ,Phone
+            FROM
+                Contact
+            WHERE
+                AccountId = :accountId
         ];
     }
 }
