--- a/force-app/main/default/classes/AccountListControllerVisualforce.cls
+++ b/force-app/main/default/classes/AccountListControllerVisualforce.cls
@@ -1,12 +1,29 @@
 public with sharing class AccountListControllerVisualforce {
-    public List<Account> accounts { get; private set; }
-    public Integer numberOfEmployees { get; set; }
+    
+    // 取引先リスト
+    public List<Account> accounts {get; private set;}
+    // 従業員数
+    public Integer numberOfEmployees {get; set;}
+
+    /**
+     * コンストラクタ
+     */
+    public AccountListControllerVisualforce() {
+
+    }
+
+    /**
+     * 取引先情報取得
+     */
     public void queryAccounts() {
-        // In real world, probably more complex logic here
         this.accounts = [
-            SELECT Name
-            FROM Account
-            WHERE NumberOfEmployees = :numberOfEmployees
+            SELECT
+                 Id
+                ,Name
+            FROM
+                Account
+            WHERE
+                NumberOfEmployees = :numberOfEmployees
         ];
     }
 }
