--- a/force-app/main/default/classes/AccountSearchController.cls
+++ b/force-app/main/default/classes/AccountSearchController.cls
@@ -1,5 +1,18 @@
 public class AccountSearchController {
+    
+    // 従業員数
     public Integer numberOfEmployees {get; set;}
+
+    /**
+     * コンストラクタ
+     */
+    public AccountSearchController() {
+
+    }
+
+    /**
+     * 従業員数リセット
+     */
     public void reset() {
         this.numberOfEmployees = null;
     }
