--- a/force-app/main/default/classes/ApexImperativeMethodController.cls
+++ b/force-app/main/default/classes/ApexImperativeMethodController.cls
@@ -1,9 +1,26 @@
 public with sharing class ApexImperativeMethodController {
+
+    /**
+     * コンストラクタ
+     */
+    public ApexImperativeMethodController() {
+
+    }
+    
+    /**
+     * 取引先責任者リスト取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContactList() {
         return [
-            SELECT Id, Name, Title, Phone, Email
-            FROM Contact
+            SELECT
+                 Id
+                ,Name
+                ,Title
+                ,Phone
+                ,Email
+            FROM
+                Contact
             WITH SECURITY_ENFORCED
             LIMIT 10
         ];
