--- a/force-app/main/default/classes/DisplayAccountsUsingWireController.cls
+++ b/force-app/main/default/classes/DisplayAccountsUsingWireController.cls
@@ -7,8 +7,21 @@ public with sharing class DisplayAccountsUsingWireController {
 
     }
 
+    /**
+     * 取引先情報取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Account> displayAccounts() {
-        return [SELECT Id, Name, AccountNumber, Industry, Rating FROM Account LIMIT 5];
+        return [
+            SELECT
+                 Id
+                ,Name
+                ,AccountNumber
+                ,Industry
+                ,Rating
+            FROM
+                Account
+            LIMIT 5
+        ];
     }
 }
