--- a/force-app/main/default/classes/DisplayContactsUsingImperativeController.cls
+++ b/force-app/main/default/classes/DisplayContactsUsingImperativeController.cls
@@ -7,8 +7,20 @@ public with sharing class DisplayContactsUsingImperativeController {
 
     }
 
+    /**
+     * 取引先責任者情報取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContactList() {
-        return [ SELECT Id, Name, Phone, Account.Name FROM Contact LIMIT 5 ];
+        return [
+            SELECT
+                 Id
+                ,Name
+                ,Phone
+                ,Account.Name
+            FROM
+                Contact
+            LIMIT 5
+        ];
     }
 }
