--- a/force-app/main/default/classes/apexContactsForAccountController.cls
+++ b/force-app/main/default/classes/apexContactsForAccountController.cls
@@ -1,11 +1,30 @@
-public with sharing class apexContactsForAccountController  {
+public with sharing class apexContactsForAccountController {
 
+    /**
+     * コンストラクタ
+     */
+    public apexContactsForAccountController() {
+
+    }
+
+    /**
+     * 取引先責任者リスト
+     */
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContacts(String accId) {
         return [
-            SELECT AccountId, Id, FirstName, LastName, Title, Phone, Email
-            FROM Contact
-            WHERE AccountId = :accId
+            SELECT
+                 Id
+                ,AccountId
+                ,FirstName
+                ,LastName
+                ,Title
+                ,Phone
+                ,Email
+            FROM
+                Contact
+            WHERE
+                AccountId = :accId
             WITH SECURITY_ENFORCED
         ];
     }
