--- a/force-app/main/default/classes/AccountListControllerLwc.cls
+++ b/force-app/main/default/classes/AccountListControllerLwc.cls
@@ -1,28 +1,57 @@
 public with sharing class AccountListControllerLwc {
+
+    /**
+     * コンストラクタ
+     */
+    public AccountListControllerLwc() {
+
+    }
+
+    /**
+     * 取引先情報取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Account> queryAccounts(Integer numberOfEmployees) {
-        return [ // Return whatever the component needs
-            SELECT Name
-            FROM Account
-            WHERE NumberOfEmployees >= :numberOfEmployees
+        return [
+            SELECT
+                 Id
+                ,Name
+            FROM
+                Account
+            WHERE
+                NumberOfEmployees >= :numberOfEmployees
         ];
     }
 
+    /**
+     * 取引先情報取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Account> queryAccountsByEmployeeNumber(Integer numberOfEmployees) {
         return [
-            SELECT Name
-            FROM Account
-            WHERE NumberOfEmployees >= :numberOfEmployees
+            SELECT
+                 Id
+                ,Name
+            FROM
+                Account
+            WHERE
+                NumberOfEmployees >= :numberOfEmployees
         ];
     }
 
+    /**
+     * 取引先情報取得
+     */
     @AuraEnabled(cacheable=true)
     public static List<Account> queryAccountsByRevenue(Decimal annualRevenue) {
         return [
-            SELECT Name
-            FROM Account
-            WHERE AnnualRevenue >= :annualRevenue
+            SELECT
+                 Id
+                ,Name
+            FROM
+                Account
+            WHERE
+                AnnualRevenue >= :annualRevenue
         ];
     }
 }
