--- a/force-app/main/default/classes/WelcomeUserControllerTest.cls
+++ b/force-app/main/default/classes/WelcomeUserControllerTest.cls
@@ -16,7 +16,7 @@ private class WelcomeUserControllerTest {
             
             Test.stopTest();
             
-            System.assert(String.isNotEmpty(cls.keyword));
+            Assert.isTrue(String.isNotEmpty(cls.keyword));
         }
     }
 }
